# docker-applications

./: .gitignore  README.md
apps/nextcloud/: .env  default.docker-compose
bash/all/: down.bash  run-down-as-root.bash  run-down.bash  run-wipe-volumes-as-root.bash  run-wipe-volumes.bash  wipe-volumes.bash
bash/common/: elevate.bash  formatting.bash  list-available-apps.bash  print-info-available-apps.bash  run-build-as-root.bash  run-build.bash  run-down-as-root.bash  run-down.bash  run-rebuild-as-root.bash  run-rebuild.bash  run-reload-proxy-as-root.bash  run-reload-proxy.bash  run-setup-as-root.bash  run-setup.bash  run-up-as-root.bash  run-up.bash  run-upgrade-as-root.bash  run-upgrade.bash  run-version-as-root.bash  run-version.bash  run-wipe-volumes-as-root.bash  run-wipe-volumes.bash  wipe-volumes.bash
bash/kimai/: build.bash  down.bash  rebuild.bash  reload-proxy.bash  reload.bash  up.bash  wipe-volumes.bash
bash/nextcloud/: build.bash  down.bash  rebuild.bash  reload-proxy.bash  reload.bash  up.bash  wipe-volumes.bash
bash/nginx/: build.bash  common.bash  down.bash  rebuild.bash  reload-proxy.bash  reload.bash  up.bash  wipe-volumes.bash
docker/collabora-code/: .env  default.docker-compose  proxy.conf  proxy.env
docker/coturn/: .env  default.docker-compose  (+1 more)
docker/theia-ide/web/rootfs-build/tmp/gunit/: build.bash  meson.build
docker/theia-ide/web/rootfs/etc/talsen/assets/cpp-template/.workspace/.gunit/: meson.build
docker/theia-ide/web/rootfs/etc/talsen/assets/cpp-template/.workspace/.gunit/src/: Dummy.cpp  Dummy.hpp  DummyBehavior.cpp  main.cpp
(+318 files in other folders)
